Add generated java bindings as source root